unified lombok versions, added compiler args and path for compatibility